# flex-evals-viewer

./: .gitignore  Makefile  README.md  pyproject.toml
agent/: agent.py  database.py
evals/: agent_evals.yaml  conftest.py  test_agent.py  utils.py
evals/results/: 2026-02-23T18-31-01.931940+00-00_b43637b1.json  2026-02-23T18-31-10.649820+00-00_0d73676b.json  2026-02-23T18-31-18.429288+00-00_2796da37.json  2026-02-23T18-31-24.876032+00-00_71e26979.json  2026-02-23T18-31-34.001821+00-00_31eb4b15.json  2026-02-23T18-31-44.439095+00-00_6762cc58.json  2026-02-23T23-12-49.004978+00-00_7e6719b5.json  2026-02-23T23-12-56.287273+00-00_4da636bc.json  2026-02-23T23-13-02.429422+00-00_f4b8fe72.json  2026-02-23T23-13-09.698634+00-00_a95f93a1.json  2026-02-23T23-13-19.024438+00-00_00d047d3.json  2026-02-23T23-13-27.586565+00-00_38da802d.json  2026-04-13T01-03-41.568239+00-00_0edea282.json  2026-04-13T01-03-51.613007+00-00_d219f680.json  2026-04-13T01-04-00.995457+00-00_a35d446a.json  2026-04-13T01-04-10.468144+00-00_8cd56834.json  2026-04-13T01-04-18.247935+00-00_fbcde735.json  2026-04-13T01-04-28.524583+00-00_0a8c31d6.json
viewer/: package-lock.json  vite.config.ts
viewer/server/: index.ts
viewer/server/routes/: runs.ts
viewer/src/: types.ts
viewer/src/components/: CheckViews.tsx  RunDetail.tsx  RunsList.tsx  SampleRow.tsx  SummaryMatrix.tsx  SyntaxJson.tsx  TestCaseTable.tsx
